--- a/index.html
+++ b/index.html
@@ -2,17 +2,104 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+
+    <link rel="icon" type="image/jpg" href="./img/nLogo.jpg" sizes="16x16">
         <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-        <ul>
-            <li><a href="recipes/lasanga/lasagna.html">Lasagna</a></li>
-            <li><a href="recipes/grilled-cheese/grilled-cheese.html">Grilled Cheese</a></li>
-            <li><a href="recipes/mac-and-cheese/mAc.html">Mac & Cheese</a></li>
-        </ul>
+    <div class="container-fluid" id="headerSettings">
+
+          <div class="btn-group dropright">
+            <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Quick Recipes
+            </button>
+            <div id="dropLink" class="dropdown-menu">
+              <a class="dropText" href="recipes/lasanga/lasagna.html">Lasagna</a>
+              <br>
+              <a class="dropText" href="recipes/grilled-cheese/grilled-cheese.html">Grilled Cheese</a>
+              <br>
+              <a class="dropText" href="recipes/mac-and-cheese/mAc.html">Mac & Cheese</a>
+            </div>
+          </div>
+      <span class="moveCenter">
+        <img width="65" height="65" src="./img/odinHead.svg" alt="The Odin Project Logo">
+        <h1>Odin Recipes</h1>
+      </span>
+    </div>
+
+    <div class="container-fluid" id="bodySettings">
+       
+        <div class="bd-example">
+            <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+              </ol>
+
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+
+                    <a href="recipes/lasanga/lasagna.html">
+                        <img src="recipes/lasanga/img/finishedproduct.webp" class="d-block w-100" alt="Plate of Lasagna">
+                    </a>
+
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Lasagna</h5>
+                    <p>Straight forward steps on making the Worlds Best Lasagna</p>
+                  </div>
+                </div>
+
+                <div class="carousel-item">
+                    <a href="recipes/grilled-cheese/grilled-cheese.html">
+                        <img src="recipes/grilled-cheese/img/finishedBread.webp" class="d-block w-100" alt="Plate of Grilled Cheese">
+                    </a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Grilled Cheese</h5>
+                    <p>What's faster than making a Grilled Cheese</p>
+                  </div>
+                </div>
+
+                <div class="carousel-item">
+                    <a href="recipes/mac-and-cheese/mAc.html">
+                        <img src="recipes/mac-and-cheese/img/finishedMac.webp" class="d-block w-100" alt="A bowl of Mac and Cheese">
+                    </a>
+                  <div class="carousel-caption d-none d-md-block">
+                    <h5>Mac & Cheese</h5>
+                    <p>Quick and easy way to make Mac & Cheese</p>
+                  </div>
+                </div>
+              </div>
+
+              <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
+
+<footer>
+    <div id="footerSettings" class="container-fluid"> 
+        <h6 class="moveCenter">Made by: Nayo Ortiz</h6>
+    </div>
+</footer>
+
 </html>
